test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_type_decl.draco
type ty = bool;

proc main() void : a := 1; corp;

