test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_new_as_identifier.draco
int new;
 
proc main() void : a := 1; corp;
